# yousoftware

./: Cargo.toml  bootstrap.js  pnpm-lock.yaml  webpack.config.js
src/: app.rs  lib.rs
src/components/: Spinner.rs  mod.rs
static/: index.html
style/: style.scss
