[package]
name = "yewsoftware"
version = "0.1.0"
authors = ["Yousof Mersal"]
edition = "2021"

[features]
default = ["wee_alloc"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.14"
strum = "0.23.0"
strum_macros = "0.23.1"
serde = "1.0.136"
serde_derive = "1.0.136"
wasm-bindgen = "0.2.79"
wasm-logger = "0.2.0"
wee_alloc = { version = "0.4.5", optional = true }
yew = { git = "https://github.com/yewstack/yew" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = ['KeyboardEvent']
